--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,11 @@
 version: '3'
 services:
+
   angular-hero:
     build: .
     image: angular-hero:v0.1
-    command: sh -c 'npm install; npm start'
+    #command: sh -c 'npm install; npm start'
     ports:
-      - '4200:4200'
+      - '4200:80'
     #volumes:
-    #  - .:/src
+    #  - .:/app
