--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,8 +21,8 @@ jobs:
           name: Publish app to Docker Hub
           command: |
             docker login -u $DOCKER_HUB_USER -p $DOCKER_HUB_PASS
-            docker build -t $DOCKER_HUB_USER/angular-hero:$CIRCLE_SHA1 .
-            docker tag angular-hero_angular-hero $DOCKER_HUB_USER/angular-hero:$CIRCLE_SHA1
-            docker tag angular-hero_angular-hero $DOCKER_HUB_USER/angular-hero:latest
-            docker push $DOCKER_HUB_USER/angular-hero:$CIRCLE_SHA1
+            docker build -t $DOCKER_HUB_USER/angular-hero:v0.0.1 .
+            docker tag $DOCKER_HUB_USER/angular-hero:v0.0.1 $DOCKER_HUB_USER/angular-hero:v0.0.1
+            docker tag $DOCKER_HUB_USER/angular-hero:v0.0.1 $DOCKER_HUB_USER/angular-hero:latest
+            docker push $DOCKER_HUB_USER/angular-hero:v0.0.1
             docker push $DOCKER_HUB_USER_ID/angular-hero:latest
